--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "docs:deploy": "gh-pages -d docs-dist",
     "build": "father build",
     "deploy": "npm run docs:build && npm run docs:deploy",
+    "deploy:site": "npm run build:site && gh-pages -d doc-dist",
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
@@ -55,11 +56,12 @@
     "@umijs/fabric": "^2.8.1",
     "@umijs/test": "^3.0.5",
     "commitlint": "^17.4.4",
+    "cross-env": "^7.0.3",
     "dumi": "^1.1.0",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "father": "^4.0.0-rc.2",
-    "gh-pages": "^3.0.0",
+    "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
