--- a/package.json
+++ b/package.json
@@ -36,18 +36,21 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.7",
+    "jest": "26.6.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lodash": "^4.17.21",
     "rc-input": "^0.2.2",
     "react": "^18.0.0",
-    "react-transition-group": "^4.4.5"
+    "react-dom": "^18.2.0",
+    "react-transition-group": "^4.4.5",
+    "ts-jest": "26.5.6"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.4.4",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^14.0.0",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.191",
     "@types/react-transition-group": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
@@ -62,6 +65,8 @@
     "father": "^4.0.0-rc.2",
     "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-html-reporters": "^3.1.4",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
     "yorkie": "^2.0.0"
